<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/title_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dip" >

        <TextView
            android:id="@+id/account_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color" />

    </TableRow>

    <TableRow
        android:id="@+id/email_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/add_account_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:hint="@string/First_Name"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/add_account_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Last_Name"
            android:inputType="textEmailAddress" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    </TableRow>

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/add_account_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:hint="@string/address_hint"
            android:inputType="textEmailAddress" />

    </TableRow>

    <TableRow
        android:id="@+id/phone_number_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/add_account_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:hint="@string/city_hint"
            android:inputType="textEmailAddress" />

    </TableRow>

    <TableRow
        android:id="@+id/policy_item_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/add_account_state_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:prompt="@string/state_prompt" />

        <EditText
            android:id="@+id/add_account_zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/zip_hint"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/add_account_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_account_phone"
            android:inputType="phone" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/add_account_ssn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ssn"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/add_account_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_account_email"
            android:inputType="textEmailAddress" />

    </TableRow>

    <TableRow
        android:id="@+id/home_button_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add_account_submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit_button" />

	</TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add_account_back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_button" />

    </TableRow>

</TableLayout>